[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/mainbackground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/logo.jpg" type="Texture" id=2]
[ext_resource path="res://Sounds/Darude - Sandstorm (online-audio-converter.com).wav" type="AudioStream" id=3]
[ext_resource path="res://Fonts/Caviar_Dreams_Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/MenuButtons.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Start.gd" type="Script" id=6]
[ext_resource path="res://Fonts/font-60.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/QuitGame.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Modes.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="Fundo" type="TextureRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 1 )

[node name="IFundo" type="TextureRect" parent="Background"]
margin_left = 99.1286
margin_top = 224.14
margin_right = 483.129
margin_bottom = 609.14
texture = ExtResource( 2 )
stretch_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Background"]
pause_mode = 2
stream = ExtResource( 3 )
autoplay = true

[node name="UI" type="Node2D" parent="."]

[node name="Title" type="Label" parent="UI"]
margin_left = -2.68073
margin_top = 0.999985
margin_right = 573.319
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.101961, 0.0980392, 0.0980392, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Checkers 
with a twist"
align = 1
valign = 1

[node name="MenuButtons" type="Node2D" parent="UI"]
position = Vector2( 0, 600 )
script = ExtResource( 5 )

[node name="Start" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 6 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons/Start"]
margin_top = 50.0
margin_right = 576.0
margin_bottom = 350.0

[node name="StartGame" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_right = 576.0
margin_bottom = 83.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "Start Game"
flat = true

[node name="Button" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 87.0
margin_right = 576.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 7 )
text = "Rules"
flat = true

[node name="QuitGame" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 174.0
margin_right = 576.0
margin_bottom = 257.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "Quit Game"
flat = true
script = ExtResource( 8 )

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Start"]

[node name="Modes" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 576, 0 )
script = ExtResource( 9 )

[node name="Mode" type="VBoxContainer" parent="UI/MenuButtons/Modes"]
margin_top = 50.0
margin_right = 576.0
margin_bottom = 257.0

[node name="1v1Same" type="Button" parent="UI/MenuButtons/Modes/Mode"]
margin_right = 576.0
margin_bottom = 83.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "1v1 Same"
flat = true

[node name="Back" type="Button" parent="UI/MenuButtons/Modes/Mode"]
margin_top = 87.0
margin_right = 576.0
margin_bottom = 170.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "Back"
flat = true

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Modes"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/StartGame" to="UI/MenuButtons" method="_on_StartGame_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Button" to="UI/MenuButtons" method="_on_Button_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/QuitGame" to="UI/MenuButtons/Start/StartMenu/QuitGame" method="_on_QuitGame_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Modes/Mode/1v1Same" to="UI/MenuButtons" method="_on_1v1Same_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Modes/Mode/Back" to="UI/MenuButtons" method="_on_Back_pressed"]
